fix: white space

--- a/websrc/src/components/pic-list/pic-list.css
+++ b/websrc/src/components/pic-list/pic-list.css
@@ -31,6 +31,7 @@
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
   position: absolute;
   bottom: 0px;
   background: rgba(0, 0, 0, 0.3);
